--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "test": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i",
+    "build": "tsc",
+    "start": "node ./dist/src/server.js",
+    "dev": "nodemon ./src/server.ts",
+    "dev:test": "dotenv -e .env.test nodemon ./src/server.ts",
+    "prisma": "prisma migrate dev",
+    "prisma-seed": "prisma db seed"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +35,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@prisma/client": "^3.13.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
