--- a/front-end/package.json
+++ b/front-end/package.json
@@ -39,5 +39,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
+    "cypress": "^10.3.1",
+    "eslint-plugin-cypress": "^2.12.1"
   }
 }
